unpackaged/main/default/objects/TrainingBooking__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Training Bookings</relationshipLabel>
    <relationshipName>TrainingBookings</relationshipName>
    <type>Lookup</type>
</CustomField>