unpackaged/main/default/objects/TrainingBooking__c/fields/OpportunityCasesafeID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCasesafeID__c</fullName>
    <formula>CASESAFEID( Opportunity__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity CasesafeID</label>
    <type>Text</type>
</CustomField>