unpackaged/main/default/objects/TrainingBooking__c/fields/Pace_of_Deliveryv2__c.field-meta.xml
<CustomField>
    <fullName>Pace_of_Deliveryv2__c</fullName>
    <formula>VALUE(Text( Course_Pace_of_Delivery_Satisfacatory__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pace of Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>