unpackaged/main/default/objects/TrainingBooking__c/fields/Pace_of_the_training__c.field-meta.xml
<CustomField>
    <fullName>Pace_of_the_training__c</fullName>
    <inlineHelpText>What did you think to the pace of the training session?</inlineHelpText>
    <label>Pace of the training?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too slow</fullName>
            </value>
            <value>
                <fullName>Ideal</fullName>
            </value>
            <value>
                <fullName>Too fast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>