unpackaged/main/default/objects/TrainingBooking__c/fields/Performance_will_Improvev2__c.field-meta.xml
<CustomField>
    <fullName>Performance_will_Improvev2__c</fullName>
    <formula>Value(TEXT(Effectiveness_Performance_will_Improve__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performance will Improve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>