unpackaged/main/default/objects/TrainingBooking__c/fields/Prepared_Organisedv2__c.field-meta.xml
<CustomField>
    <fullName>Prepared_Organisedv2__c</fullName>
    <formula>Value(TEXT(Instructor_Prepared_Organised__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prepared &amp; Organised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>