unpackaged/main/default/objects/TrainingBooking__c/fields/Productivity_Increasev2__c.field-meta.xml
<CustomField>
    <fullName>Productivity_Increasev2__c</fullName>
    <formula>Value(TEXT(Effectiveness_Productivity_Increase__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Productivity Increase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>