unpackaged/main/default/objects/TrainingBooking__c/fields/PurchaseOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrderNumber__c</fullName>
    <formula>Opportunity__r.Customer_Order_Number__c</formula>
    <label>Purchase Order No.</label>
    <type>Text</type>
</CustomField>