unpackaged/main/default/objects/TrainingBooking__c/fields/Quality_Detail_Appropriatev2__c.field-meta.xml
<CustomField>
    <fullName>Quality_Detail_Appropriatev2__c</fullName>
    <formula>VALUE(Text( Course_Quality_Detail_Appropriate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality &amp; Detail Appropriate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>