unpackaged/main/default/objects/TrainingBooking__c/fields/Receptive_to_questions__c.field-meta.xml
<CustomField>
    <fullName>Receptive_to_questions__c</fullName>
    <formula>Value(TEXT(Instructor_Receptive_to_Questions__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receptive to questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>