unpackaged/main/default/objects/TrainingBooking__c/fields/Room_Layoutv2__c.field-meta.xml
<CustomField>
    <fullName>Room_Layoutv2__c</fullName>
    <formula>Value(TEXT(Facilities_Room_Layout__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Layout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>