unpackaged/main/default/objects/TrainingBooking__c/fields/Software_Hardware_Satisfactory__c.field-meta.xml
<CustomField>
    <fullName>Software_Hardware_Satisfactory__c</fullName>
    <formula>VALUE(Text( Course_Software_Hardware_Satisfactory__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Software &amp; Hardware Satisfactory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>