unpackaged/main/default/objects/TrainingBooking__c/fields/Standard_of_Equipmentv2__c.field-meta.xml
<CustomField>
    <fullName>Standard_of_Equipmentv2__c</fullName>
    <formula>Value(TEXT(Facilities_Standard_of_Equipment__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard of Equipment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>