unpackaged/main/default/objects/TrainingBooking__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <formula>TrainingCourse__r.StartDate__c</formula>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>