unpackaged/main/default/objects/TrainingBooking__c/fields/Theoretical_vs_practical_elements__c.field-meta.xml
<CustomField>
    <fullName>Theoretical_vs_practical_elements__c</fullName>
    <inlineHelpText>What did you think of the mix between theoretical and practical elements?</inlineHelpText>
    <label>Theoretical vs practical elements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More theory</fullName>
            </value>
            <value>
                <fullName>More practical</fullName>
            </value>
            <value>
                <fullName>Good balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>