unpackaged/main/default/objects/TrainingBooking__c/fields/Training_Environmentv2__c.field-meta.xml
<CustomField>
    <fullName>Training_Environmentv2__c</fullName>
    <formula>Value(TEXT(Facilities_Training_Environment__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Environment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>