unpackaged/main/default/objects/TrainingBooking__c/fields/Training_expectations__c.field-meta.xml
<CustomField>
    <fullName>Training_expectations__c</fullName>
    <inlineHelpText>Was the training you received in line with your expectations?</inlineHelpText>
    <label>Training expectations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>