unpackaged/main/default/objects/TrainingBooking__c/fields/Training_module_transition__c.field-meta.xml
<CustomField>
    <fullName>Training_module_transition__c</fullName>
    <inlineHelpText>What did you think of the progression from one section of the programme to the next?</inlineHelpText>
    <label>Training module transition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too slow</fullName>
            </value>
            <value>
                <fullName>Ideal</fullName>
            </value>
            <value>
                <fullName>Too fast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>