unpackaged/main/default/objects/TrainingBooking__c/fields/TrainingCourse__c.field-meta.xml
<CustomField>
    <fullName>TrainingCourse__c</fullName>
    <label>Training Course</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TrainingCourse__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled, Completed</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>TrainingCourse__c</referenceTo>
    <relationshipLabel>Training Bookings</relationshipLabel>
    <relationshipName>TrainingBookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>