unpackaged/main/default/objects/TrainingBooking__c/fields/Varied_Methods_Usedv2__c.field-meta.xml
<CustomField>
    <fullName>Varied_Methods_Usedv2__c</fullName>
    <formula>Value(TEXT(Instructor_Varied_Methods_Used__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Varied Methods Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>