unpackaged/main/default/objects/TrainingBooking__c/fields/Well_Balanced_Methodsv2__c.field-meta.xml
<CustomField>
    <fullName>Well_Balanced_Methodsv2__c</fullName>
    <formula>VALUE(Text( Course_Well_Balanced_Methods__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Well Balanced Methods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>