unpackaged/main/default/objects/TrainingBooking__c/fields/Well_Structuredv2__c.field-meta.xml
<CustomField>
    <fullName>Well_Structuredv2__c</fullName>
    <formula>VALUE(Text( Course_Well_Structured__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Well Structured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>