unpackaged/main/default/objects/TrainingBooking__c/fields/Would_you_attend_further_training__c.field-meta.xml
<CustomField>
    <fullName>Would_you_attend_further_training__c</fullName>
    <inlineHelpText>Would you be interested in participating in any other training/certification programmes?</inlineHelpText>
    <label>Would you attend further training?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>