unpackaged/main/default/objects/TrainingBooking__c/fields/Would_you_recommend_the_course__c.field-meta.xml
<CustomField>
    <fullName>Would_you_recommend_the_course__c</fullName>
    <inlineHelpText>Would you recommend this training programme to your colleagues?</inlineHelpText>
    <label>Would you recommend the course?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>