unpackaged/main/default/objects/TrainingBooking__c/validationRules/No_more_places_available.validationRule-meta.xml
<ValidationRule>
    <fullName>No_more_places_available</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  ISNEW(),
  ISCHANGED( Status__c )
) &amp;&amp; 
ISPICKVAL( Status__c , 'Booked') &amp;&amp;  
TrainingCourse__r.PlacesBooked__c &gt;= TrainingCourse__r.NumberOfPlaces__c</errorConditionFormula>
    <errorDisplayField>TrainingCourse__c</errorDisplayField>
    <errorMessage>The selected course is full.</errorMessage>
</ValidationRule>