unpackaged/main/default/objects/TrainingBooking__c/validationRules/Opportunity_required_Provisional_Booked.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_required_Provisional_Booked</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Opportunity__c)
&amp;&amp; OR(
  ISPICKVAL(Status__c,"Provisional"),
  ISPICKVAL(Status__c,"Booked")
)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>You must specify a valid Opportunity.</errorMessage>
</ValidationRule>