unpackaged/main/default/objects/TrainingBooking__c/validationRules/TBOOK_VR03_CourseMustBeConfirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>TBOOK_VR03_CourseMustBeConfirmed</fullName>
    <active>true</active>
    <description>Training Course must be set to Confirmed for training bookings to be set to Booked (JLR ONLY)</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c , 'Booked'),
OR(
TrainingCourse__r.CourseCode__c = "JLR-SRV-UK", TrainingCourse__r.CourseCode__c = "JLR-SRV-ISATR"),
NOT(ISPICKVAL(TrainingCourse__r.Status__c, 'Confirmed')))</errorConditionFormula>
    <errorMessage>Training Course must be Confirmed for Training Booking to be set as Booked</errorMessage>
</ValidationRule>